crates/mold_parser/src/grammar/snapshots/mold_parser__grammar__jsonpath__tests__array_access.snap
---
source: crates/mold_parser/src/grammar/jsonpath.rs
expression: "format_tree(\"$.items[0]\")"
---
JSONPATH_LITERAL
  JP_ROOT
    JP_DOLLAR Some("$")
  JP_MEMBER_ACCESS
    JP_DOT Some(".")
    JP_KEY
      JP_IDENT Some("items")
  JP_ARRAY_ACCESS
    JP_L_BRACKET Some("[")
    JP_NUMBER_LIT Some("0")
    JP_R_BRACKET Some("]")
