crates/mold_parser/src/grammar/snapshots/mold_parser__grammar__jsonpath__tests__filter.snap
---
source: crates/mold_parser/src/grammar/jsonpath.rs
expression: "format_tree(\"$.items[*] ? (@.price > 10)\")"
---
JSONPATH_LITERAL
  JP_ROOT
    JP_DOLLAR Some("$")
  JP_MEMBER_ACCESS
    JP_DOT Some(".")
    JP_KEY
      JP_IDENT Some("items")
  JP_ARRAY_WILDCARD
    JP_L_BRACKET Some("[")
    JP_STAR Some("*")
    JP_R_BRACKET Some("]")
    JP_WHITESPACE Some(" ")
  JP_FILTER
    JP_QUESTION Some("?")
    JP_WHITESPACE Some(" ")
    JP_L_PAREN Some("(")
    JP_FILTER_EXPR
      JP_CURRENT
        JP_AT Some("@")
      JP_MEMBER_ACCESS
        JP_DOT Some(".")
        JP_KEY
          JP_IDENT Some("price")
          JP_WHITESPACE Some(" ")
      JP_COMPARISON
        JP_GT Some(">")
        JP_WHITESPACE Some(" ")
        JP_NUMBER
          JP_NUMBER_LIT Some("10")
    JP_R_PAREN Some(")")
