crates/mold_parser/src/grammar/snapshots/mold_parser__grammar__jsonpath__tests__incomplete_path.snap
---
source: crates/mold_parser/src/grammar/jsonpath.rs
expression: "format_tree(\"$.\")"
---
JSONPATH_LITERAL
  JP_ROOT
    JP_DOLLAR Some("$")
  JP_MEMBER_ACCESS
    JP_DOT Some(".")
