crates/mold_parser/src/grammar/snapshots/mold_parser__grammar__jsonpath__tests__quoted_key.snap
---
source: crates/mold_parser/src/grammar/jsonpath.rs
expression: "format_tree(r#\"$.\"special-key\"\"#)"
---
JSONPATH_LITERAL
  JP_ROOT
    JP_DOLLAR Some("$")
  JP_MEMBER_ACCESS
    JP_DOT Some(".")
    JP_KEY
      JP_STRING_LIT Some("\"special-key\"")
