crates/mold_parser/src/grammar/snapshots/mold_parser__grammar__jsonpath__tests__simple_path.snap
---
source: crates/mold_parser/src/grammar/jsonpath.rs
expression: "format_tree(\"$.name\")"
---
JSONPATH_LITERAL
  JP_ROOT
    JP_DOLLAR Some("$")
  JP_MEMBER_ACCESS
    JP_DOT Some(".")
    JP_KEY
      JP_IDENT Some("name")
